[package]
name = "llm-chat"
version = "0.1.0"
edition = "2021"
authors = ["You"]
description = "A Rust client for LLM Studio API"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }